2008-09-12  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/generated.cs,
	  gtk-gui/MonoDevelop.ChangeLogAddIn.ProjectOptionPanelWidget.cs,
	  gtk-gui/MonoDevelop.ChangeLogAddIn.ChangeLogAddInOptionPanelWidget.cs,
	  gtk-gui/MonoDevelop.ChangeLogAddIn.AddLogEntryDialog.cs: Updated
	  generated code.

2008-07-21  Lluis Sanchez Gual <lluis@novell.com> 

	* ChangeLogData.cs: Moved serialization engine to MonoDevelop.Core. Use
	  new syntax for specifying attribute scope.

2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* ChangeLogAddIn.addin.xml: Bump MD version.

2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 

	* ChangeLogAddIn.addin.xml: Show the options dialog only for solution
	  items and solutions.

2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 

	* ChangeLogAddIn.addin.xml: Merged the extension points for project and
	  solution option panels into a single extension point. A single
	  extension point will now be used for all kinds of items. Extension
	  conditions can be used to make panels visible only for some
	  specific item types.

2008-05-21  Lluis Sanchez Gual <lluis@novell.com> 

	* ProjectOptionPanel.cs, ChangeLogData.cs, ProjectOptionPanelWidget.cs,
	  ChangeLogAddIn.addin.xml, ChangeLogAddIn.mdp, gtk-gui/gui.stetic,
	  Makefile.am, ChangeLogService.cs: New project model changes.

2008-03-07  Lluis Sanchez Gual <lluis@novell.com> 

	* ChangeLogAddInOptionsPanel.cs, ChangeLogAddIn.addin.xml,
	  ChangeLogAddInOptionPanelWidget.cs: Use new options dialog
	  infrastructure.
	* CommitDialogExtensionWidget.cs: Reduce width of comments, so it fits
	  in 80 cols with tabsize 8.

2008-02-26  Mike Krüger <mkrueger@novell.com> 

	

2008-01-25  Lluis Sanchez Gual <lluis@novell.com> 

	* ChangeLogAddIn.addin.xml: Update MD version.

2008-01-22  Lluis Sanchez Gual <lluis@novell.com> 

	* ChangeLogAddIn.addin.xml: Updated add-in category and description.

2008-01-15  Michael Hutchinson <mhutchinson@novell.com> 
